some fixes 3